added geometry_msgs to cmakelist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ project(ros_motor_pwm)
 find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
+  geometry_msg
 )
 
 ## System dependencies are found with CMake's conventions
